// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListingDetailsReservedBanner displays banner when custom listing type is Educator One 1`] = `
<DocumentFragment>
  <div
    class="md:pr-8 md:w-2/3 mt-4 w-full mb-8 md:mb-0 md:pl-4 lg:pl-0"
  >
    <div
      class="message is-warning"
    >
      <p
        style="text-transform: none;"
      >
        <b>
          Special housing for San Francisco public school employees.
        </b>
      </p>
      <p
        style="text-transform: none;"
      >
        <a
          href="#listing-details-eligibility"
          target="_self"
        >
          Learn more about who can apply lender on our list.
        </a>
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ListingDetailsReservedBanner displays banner when reserved community type is Accessible Units Only 1`] = `
<DocumentFragment>
  <div
    class="md:pr-8 md:w-2/3 mt-4 w-full mb-8 md:mb-0 md:pl-4 lg:pl-0"
  >
    <div
      class="message is-warning"
    >
      All units reserved for people who need accessibility features
    </div>
  </div>
</DocumentFragment>
`;

exports[`ListingDetailsReservedBanner displays banner when reserved community type is Artist Live/Work 1`] = `
<DocumentFragment>
  <div
    class="md:pr-8 md:w-2/3 mt-4 w-full mb-8 md:mb-0 md:pl-4 lg:pl-0"
  >
    <div
      class="message is-warning"
    >
      All units reserved for artists to live and work in
    </div>
  </div>
</DocumentFragment>
`;

exports[`ListingDetailsReservedBanner displays banner when reserved community type is Senior 1`] = `
<DocumentFragment>
  <div
    class="md:pr-8 md:w-2/3 mt-4 w-full mb-8 md:mb-0 md:pl-4 lg:pl-0"
  >
    <div
      class="message is-warning"
    >
      All units reserved for ages 65+
    </div>
  </div>
</DocumentFragment>
`;

exports[`ListingDetailsReservedBanner displays banner when reserved community type is Veteran 1`] = `
<DocumentFragment>
  <div
    class="md:pr-8 md:w-2/3 mt-4 w-full mb-8 md:mb-0 md:pl-4 lg:pl-0"
  >
    <div
      class="message is-warning"
    >
      All units reserved for veterans
    </div>
  </div>
</DocumentFragment>
`;

exports[`ListingDetailsReservedBanner displays custom listing type banner when both custom listing and reserved community types are selected 1`] = `
<DocumentFragment>
  <div
    class="md:pr-8 md:w-2/3 mt-4 w-full mb-8 md:mb-0 md:pl-4 lg:pl-0"
  >
    <div
      class="message is-warning"
    >
      <p
        style="text-transform: none;"
      >
        <b>
          Special housing for San Francisco public school employees.
        </b>
      </p>
      <p
        style="text-transform: none;"
      >
        <a
          href="#listing-details-eligibility"
          target="_self"
        >
          Learn more about who can apply lender on our list.
        </a>
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ListingDetailsReservedBanner does not display banner when custom listing type is unknown 1`] = `<DocumentFragment />`;

exports[`ListingDetailsReservedBanner does not display banner when reserved community and custom listing types are blank 1`] = `<DocumentFragment />`;

exports[`ListingDetailsReservedBanner does not display banner when reserved community type is Habitat for Humanity 1`] = `<DocumentFragment />`;

exports[`ListingDetailsReservedBanner does not display banner when unknown reserved community type 1`] = `<DocumentFragment />`;
